WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71418
Don't call NPP_SetWindow if the plug-in size or clip rect hasn't changed if the plug-in isn't using window relative coordinates
https://bugs.webkit.org/show_bug.cgi?id=71418
Summary
Don't call NPP_SetWindow if the plug-in size or clip rect hasn't changed if t...
Anders Carlsson
Reported
2011-11-02 16:30:32 PDT
Don't call NPP_SetWindow if the plug-in size or clip rect hasn't changed if the plug-in isn't using window relative coordinates
Attachments
Patch
(2.19 KB, patch)
2011-11-02 16:32 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-11-02 16:32:03 PDT
Created
attachment 113395
[details]
Patch
Anders Carlsson
Comment 2
2011-11-02 16:57:12 PDT
Committed
r99122
: <
http://trac.webkit.org/changeset/99122
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug