Don't call NPP_SetWindow if the plug-in size or clip rect hasn't changed if the plug-in isn't using window relative coordinates https://bugs.webkit.org/show_bug.cgi?id=71418

Reviewed by Adam Roben.

This avoids calling into the plug-in when only the plug-in position relative to the window changes.

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::geometryDidChange):

Canonical link: https://commits.webkit.org/87713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99122 268f45cc-cd09-0410-ab3c-d52691b4dbfc